fix to major spacing glitches

--- a/src/components/SpotlightCard/SpotlightCard.css
+++ b/src/components/SpotlightCard/SpotlightCard.css
@@ -1,6 +1,6 @@
 .card-spotlight {
   width: 10rem;
-  height: 35vw;
+  height: 38vw;
   padding: 2vw;
   padding-top: 0;
   padding-bottom: 0;
