--- a/src/index.css
+++ b/src/index.css
@@ -192,10 +192,10 @@ hr {
 }
 
 li {
-  display: flex; /* Keeps text and icon aligned */
-  align-items: flex-start; /* Aligns icon with the first line of text */
-  gap: 0.8rem; /* Consistent spacing */
-  font-size: 0.5rem; /* Stable font size */
+  display: flex;
+  align-items: flex-start;
+  gap: 0.8rem;
+  font-size: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -229,6 +229,21 @@ li {
   .notIncluded li::before,
   .included li::before {
     margin-left: -2rem;
+    margin-top: 0.15rem;
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+  li {
+    font-size: 0.5rem;
+    margin-left: 1rem;
+    margin-bottom: 0.15rem;
+  }
+  ul {
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+  }
+  :root {
+    font-size: 1.5rem;
   }
 }
 
